[flake8]
exclude = */migrations/*.py,*/manage.py,ve/*
max-line-length = 89

[tool:pytest]
python_files=test*.py
addopts = --verbose --ds=seed_message_sender.testsettings --ignore=ve
filterwarnings =
    ignore::DeprecationWarning:responses

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENCE
